# rust-os

./: Cargo.toml  run.sh  setup.sh
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga.rs
tests/: basic_boot.rs  stack_overflow.rs
