[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
spin = "0.5.2"
raw-cpuid = "11.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build]
target = "x86_64.json"

[toolchain]
channel = "nightly"

