[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = {version="0.9", features = ["map_physical_memory"]}
spin = "0.5.2"
raw-cpuid = "11.2.0"
x86_64 = "0.15.1"
uart_16550 = "0.3.1"
volatile = "0.6.1"
pic8259 = "0.10.1"
pc-keyboard = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build]
target = "x86_64.json"

[toolchain]
channel = "nightly"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 30

[[test]]
name = "stack_overflow"
harness = false